tree items cropping fix

--- a/thing-editor/src/editor/style.css
+++ b/thing-editor/src/editor/style.css
@@ -664,6 +664,7 @@ input {
 .tree-item {
 	position: relative;
 	overflow-x: hidden;
+	overflow-y: clip;
 }
 
 .item-prefab-reference {
